<resources>
    <string name="app_name">ViaBrico</string>
    <string name="user">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="button_co">Connexion</string>
    <string name="nom_fournisseur">M.Dupond</string>
    <string name="description">Lorem Ipsum</string>
    <string name="fiche_vue">Fiche détaillée</string>
    <string name="balise_name">Nom</string>
    <string name="balise_adresse">Adresse</string>
    <string name="adresse_vue">8 rue des Acacias, 44000 Nantes</string>
    <string name="balise_telephone">Téléphone</string>
    <string name="telephone_vue">06.12.34.56.78</string>
    <string name="balise_mail">Mail</string>
    <string name="mail_vue">xyz@example.com</string>
    <string name="balise_description">Description</string>
    <string name="description_vue">Lorem Ipsum</string>
    <string name="localisation_vue">Localisation</string>
    <string name="bouton_retour_vue">Retour</string>
    <string name="content_description_vue">Modification des informations du fournisseur</string>
    <string name="content_ajout">Ajout d\'un fournisseur</string>
    <string name="button_ajouter">AJOUTER</string>
    <string name="button_annuler">ANNULER</string>
    <string name="edittext_nom_fournisseur_ajout">Nom du fournisseur</string>
    <string name="edittext_adresse_fournisseur_ajout">Numéro, rue et ville</string>
    <string name="edittext_telephone_fournisseur_ajout">06.12.34.56.78</string>
    <string name="edittext_mail_fournisseur_ajout">xyz@example.com</string>
    <string name="edittext_description_fournisseur_ajout">Lorem Ipsum</string>
</resources>
