<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient">

    <!-- Déclaration des widgets, layouts et boutons permettant d'avoir le visuel de l'application -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bienvenue sur l'application ViaBrico"
        android:id="@+id/bienvenue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saisie_user"
        android:gravity="center">

    </TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saisie_user"
        android:hint="@string/user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bienvenue"
        app:layout_constraintBottom_toTopOf="@id/saisie_password"
        android:gravity="center"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saisie_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saisie_user"
        app:layout_constraintBottom_toTopOf="@id/button_connexion"
        android:gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_connexion"
        android:hint="@string/button_co"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saisie_password"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"/>

</android.support.constraint.ConstraintLayout>