<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fournisseurActivity"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <!-- Déclaration des widgets, layouts et boutons permettant d'avoir le visuel de l'application -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/size_nom_app_all"
        android:id="@+id/name_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:paddingTop="@dimen/padding_top_name_app_fournisseur_activity"
        />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:id="@+id/layout_fournisseur"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_app"
        app:layout_constraintBottom_toTopOf="@id/button_ajout"
        android:layout_marginLeft="@dimen/margin_cotes_layout_fournisseur_activity"
        android:layout_marginRight="@dimen/margin_cotes_layout_fournisseur_activity">

            <TextView
                android:id="@+id/balise_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balise_name"
                android:textSize="@dimen/balises"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/layout_fournisseur"
                app:layout_constraintRight_toRightOf="@id/layout_fournisseur"
                app:layout_constraintTop_toBottomOf="@id/layout_fournisseur"
                app:layout_constraintBottom_toTopOf="@id/name_fournisseur"
                android:paddingLeft="@dimen/padding_top_balises_fournisseur_activity"
                android:paddingTop="@dimen/padding_top_balises_fournisseur_activity"/>

            <TextView
                android:id="@+id/name_fournisseur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_fournisseur"
                app:layout_constraintLeft_toLeftOf="@id/layout_fournisseur"
                app:layout_constraintRight_toRightOf="@id/layout_fournisseur"
                app:layout_constraintTop_toBottomOf="@id/balise_name"
                app:layout_constraintBottom_toTopOf="@id/balise_description"
                android:paddingLeft="@dimen/padding_top_balises_fournisseur_activity"
                android:paddingTop="@dimen/padding_top_donnees_fournisseur_activity"/>

            <TextView
                android:id="@+id/balise_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balise_description"
                android:textSize="@dimen/balises"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/layout_fournisseur"
                app:layout_constraintRight_toRightOf="@id/layout_fournisseur"
                app:layout_constraintTop_toBottomOf="@id/name_fournisseur"
                app:layout_constraintBottom_toTopOf="@id/description"
                android:paddingLeft="@dimen/padding_top_balises_fournisseur_activity"
                android:paddingTop="@dimen/padding_left_donnees_fournisseur_activity"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintLeft_toLeftOf="@id/layout_fournisseur"
                app:layout_constraintRight_toRightOf="@id/layout_fournisseur"
                app:layout_constraintTop_toBottomOf="@id/balise_description"
                app:layout_constraintBottom_toTopOf="@id/layout_button"
                android:paddingLeft="@dimen/padding_left_donnees_fournisseur_activity"
                android:paddingTop="@dimen/padding_top_donnees_fournisseur_activity"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_button"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_bot_layout_buttons_fournisseur_activity"
            app:layout_constraintLeft_toLeftOf="@id/layout_fournisseur"
            app:layout_constraintRight_toRightOf="@id/layout_fournisseur"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintBottom_toBottomOf="@id/layout_fournisseur">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_vue"
                android:src="@drawable/eye"
                android:layout_marginRight="@dimen/margin_boutton_eye_fournisseur_activity"
                app:layout_constraintRight_toRightOf="@id/layout_button"
                app:layout_constraintTop_toTopOf="@id/layout_button"
                app:layout_constraintTop_toBottomOf="@id/layout_button"
                android:background="@null"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_supp"
                android:src="@drawable/trash"
                android:layout_marginRight="@dimen/margin_boutton_trash_fournisseur_activity"
                app:layout_constraintRight_toRightOf="@id/layout_button"
                app:layout_constraintTop_toBottomOf="@id/layout_button"
                app:layout_constraintBottom_toBottomOf="@id/layout_button"
                android:background="@null"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_ajout"
        android:hint="@string/button_ajouter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_fournisseur"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/boutons"
        />


</android.support.constraint.ConstraintLayout>